# Harjoitustyo2048

./: .coverage  .gitignore  README.md  pyproject.toml
Dokumentaatio/: Käyttöohje.docx  Määrittelydokumentaatio.docx  Testausdokumentti.docx  Toteutusdokumentti.docx  Viikkorapotti 1.docx  ~$ikkorapotti 1.docx  ~$stausdokumentti.docx  ~$teutusdokumentti.docx  ~$yttöohje.docx  ~$ärittelydokumentaatio.docx
harjoitustyo2048/: main.py
harjoitustyo2048/algorithm/: minimax.py
harjoitustyo2048/base_game/: game.py
harjoitustyo2048/tests/: game_test.py
harjoitustyo2048/ui/: visual.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_7682bcbdde837b54___init___py.html  z_7682bcbdde837b54_game_py.html  z_8e4c0971edcca939___init___py.html  z_8e4c0971edcca939_game_test_py.html
