[project]
name = "harjoitustyo2048"
version = "0.1.0"
description = ""
authors = [
    {name = "Tiia Nylén",email = "tiia.nylen@elisa.fi"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
